[tool.poetry]
name = "ja-wiki-category"
version = "0.1.0"
description = ""
authors = ["Katsuya SHIMABUKURO <katsu.generation.888@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
